<resources>
    <string name="app_name">ExamenInicioPMDM</string>
    <string name="titulo">Caluladora simple</string>
    <string name="titulo_pregunta">¿Qué tipo de operación quieres realizar?</string>
    <string name="texto_boton">Calcular</string>
    <string name="texto_toast">Falta alguno de los operandos o no hay operación seleccionada</string>
    <string name="texto_suma">Suma</string>
    <string name="texto_resta">Resta</string>
    <string name="texto_multiplicacion">Multiplicación</string>
    <string name="texto_division">División</string>

</resources>
