<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/titulo_pregunta"
        android:textAlignment="center"
        android:textSize="20dp" />

    <RadioGroup
        android:id="@+id/grupoOperaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/opcionSuma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="suma"
            android:text="@string/texto_suma" />

        <RadioButton
            android:id="@+id/opcionResta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="resta"
            android:text="@string/texto_resta" />


        <RadioButton
            android:id="@+id/opcionDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="division"
            android:text="@string/texto_division" />

        <RadioButton
            android:id="@+id/opcionMult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="multiplicacion"
            android:text="@string/texto_multiplicacion" />


    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/editOp1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.3"
            android:textSize="30dp"
            android:inputType="number"
            android:textAlignment="center"/>

        <ImageButton
            android:id="@+id/imagenOperación"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:layout_gravity="bottom"
            android:src="@drawable/interrogante" />

        <EditText
            android:id="@+id/editOp2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.3"
            android:textSize="30dp"
            android:inputType="number"
            android:textAlignment="center" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/texto_boton" />
</LinearLayout>